RESOLVED FIXED24515
[GTK] soup backend should use GMappedFile instead of mmap directly
https://bugs.webkit.org/show_bug.cgi?id=24515
Summary [GTK] soup backend should use GMappedFile instead of mmap directly
Gustavo Noronha (kov)
Reported 2009-03-11 06:46:39 PDT
People have reported problems building WebKitGTK+ in Windows because of our usage of mmap/munmap in ResourceHandleSoup.cpp; glib provides a solution to this problem called GMappedFile, already, so we should use it.
Attachments
proposed patch (4.48 KB, patch)
2009-03-11 06:47 PDT, Gustavo Noronha (kov)
no flags
proposed patch fixed (4.80 KB, patch)
2009-03-11 07:25 PDT, Gustavo Noronha (kov)
zecke: review+
Gustavo Noronha (kov)
Comment 1 2009-03-11 06:47:27 PDT
Created attachment 28478 [details] proposed patch
Gustavo Noronha (kov)
Comment 2 2009-03-11 07:25:00 PDT
Created attachment 28479 [details] proposed patch fixed Addressed comments by zecke on IRC.
Gustavo Noronha (kov)
Comment 3 2009-03-12 05:00:03 PDT
Landed as .r41610
Note You need to log in before you can comment on or make changes to this bug.