2009-03-11  Gustavo Noronha Silva  <gns@gnome.org>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=24515
        [GTK] soup backend should use GMappedFile instead of mmap directly

        Rewrite mmap code used to upload files to use GMappedFile, so that
        it is platform-independent.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::ResourceHandle::startHttp):

Canonical link: https://commits.webkit.org/33671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41610 268f45cc-cd09-0410-ab3c-d52691b4dbfc